Refactor MongoDB client to use MongoDBManager for connection handling; update utility imports and improve transaction processing logic